--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <style>
+        body {
+            color: #333;
+        }
+        
+        h1 {
+            color: #000;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello, world!</h1>
